@@ -1,0 +1,9 @@
+Streamlined data import and export by making assumptions that the user
+is probably willing to make: 'import()' and 'export()' determine the
+data structure from the file extension, reasonable defaults are used
+for data import and export (e.g., 'stringsAsFactors=FALSE'), web-based
+import is natively supported (including from SSL/HTTPS), compressed
+files can be read directly without explicit decompression, and fast
+import packages are used where appropriate. An additional convenience
+function, 'convert()', provides a simple method for converting between
+file types.
