@@ -1,0 +1,23 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 00:47:04 brook Exp $
+
+CATEGORIES=	devel R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/rio/
+COMMENT=	Swiss-army knife for data I/O
+LICENSE=	gnu-gpl-v2
+
+R_PKGNAME=	rio
+R_PKGVER=	0.5.16
+
+DEPENDS+=	R-tibble>=2.1.3:../../math/R-tibble
+DEPENDS+=	R-data.table>=1.9.8:../../textproc/R-data.table
+DEPENDS+=	R-haven>=1.1.0:../../textproc/R-haven
+DEPENDS+=	R-openxlsx>=4.1.0.1:../../textproc/R-openxlsx
+DEPENDS+=	R-readxl>=0.1.1:../../textproc/R-readxl
+DEPENDS+=	R-curl>=0.6:../../www/R-curl
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
