@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 00:47:04 brook Exp $
+
+SHA1 (R/rio_0.5.16.tar.gz) = a5c87d0c970d51b89f6ab002f31fd9824a31fa6c
+RMD160 (R/rio_0.5.16.tar.gz) = bbb8b01573571a457ef21b753a76e08bdeeeedf4
+SHA512 (R/rio_0.5.16.tar.gz) = 96b789b6b896f29a91967bf10a876d47fa0cf901c62d0cc372ce78934194ee5b21ce432a113f8a194b20a2a28ca6d62e5725bd37d632be0f6827785e0cede965
+Size (R/rio_0.5.16.tar.gz) = 420489 bytes
